--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,25 @@
 
 </head>
 <body>
-    <section >
-        <div class="wrapper">
-            div.
+<section class="kids">
+    <div class="company">
+        <div class="company__image">
+            <img src="images/kids.jpg"
+                 srcset="images/team-photos/kids.jpg 380w,
+                                                images/kids@2x.jpg 760w"
+                 sizes="380px"
+                 alt="team1"/>
         </div>
-    </section>
+        <div class="company__description">
+            <p>За останні 5 років кількість дітей, які вміють
+                користуватися комп'ютером, збільшилася
+                приблизно в 10 разів.</p>
+            <p>Як зазначає більшість дослідників, ці тенденції
+                будуть прискорюватися незалежно від шкільної
+                освіти.
+            </p>
+        </div>
+    </div>
+</section>
 </body>
 </html>
