--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <section class="kids">
-    <div class="company">
+    <div class="company container">
         <div class="company__image">
             <img src="images/kids.jpg"
                  srcset="images/team-photos/kids.jpg 380w,
