--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css"/>
-
+    <title>GOIT Teens</title>
 </head>
 <body>
 
@@ -45,7 +45,7 @@
         </div>
       </div>
     </header>
-    <section class="kids">
+    <section>
         <div class="company container">
             <div class="company__image">
                 <img src="images/kids.jpg"
