add container paddings

--- a/src/index.html
+++ b/src/index.html
@@ -49,10 +49,10 @@
         <div class="company container">
             <div class="company__image">
                 <img src="images/kids.jpg"
-                     srcset="images/team-photos/kids.jpg 380w,
+                     srcset="images/kids.jpg 380w,
                                                 images/kids@2x.jpg 760w"
                      sizes="380px"
-                     alt="team1"/>
+                     alt="company"/>
             </div>
             <div class="company__description">
                 <p>За останні 5 років кількість дітей, які вміють
