--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,11 @@
     <header>
       <div class="banner">
         <div class="site-navigation">
+          <div>
         <a href="#" class="site-logo">
           <img src="images/Logo.jpg" alt="site-logo" width="143" height="37" />
         </a>
+      </div>
         <nav>
           <ul class="site-navigation__list">
             <li><a href="#" class="site-navigation__item">Front-End</a></li>
