--- a/src/index.html
+++ b/src/index.html
@@ -49,9 +49,9 @@
         <div class="company container">
             <div class="company__image">
                 <img
-                     srcset="
+                     srcset="images/kids.jpg 650w,
                              images/kids-mobile.jpg 320w,
-                             "
+                             images/kids@2x.jpg 760w"
                      sizes="380px"
                      alt="company"
                      src="images/kids.jpg"/>
