--- a/src/index.html
+++ b/src/index.html
@@ -52,9 +52,8 @@
     <section>
         <div class="company container">
             <div class="company__image">
-
             </div>
-            <div class="company__description">
+            <div class="company__text">
                 <p>За останні 5 років кількість дітей, які вміють
                     користуватися комп'ютером, збільшилася
                     приблизно в 10 разів.</p>
@@ -63,6 +62,14 @@
                     освіти.
                 </p>
             </div>
+          <div class="company_description">
+            <p>Програма навчання
+              створюється за участі
+              відомих спеціалістів
+              IT сектору,
+              успішних стартаперів, бізнес-тренерів
+              і підліткових психологів.</p>
+          </div>
         </div>
     </section>
   </body>
