--- a/src/index.html
+++ b/src/index.html
@@ -54,12 +54,8 @@
           <div class="company__image">
           </div>
           <div class="company_description">
-            <p>Програма навчання
-              створюється за участі
-              відомих спеціалістів
-              IT сектору,
-              успішних стартаперів, бізнес-тренерів
-              і підліткових психологів.</p>
+            <p>Програма навчання створюється за участі відомих спеціалістів IT сектору,
+              успішних стартаперів, бізнес-тренерів і підліткових психологів.</p>
           </div>
         </div>
     </section>
