--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         <button class="button header-button">Залишити заявку</button>
       </div>
         <div class="banner-title container">
-          <h1>Наша місія</h1>
+          <h1 class="title">Наша місія</h1>
           <div class="banner-info">
             <p>
               Допомогти кожному підлітку створити свою
