add fields section

--- a/src/index.html
+++ b/src/index.html
@@ -1,63 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>GOITeens</title>
-    <link rel="stylesheet" href="css/styles.min.css" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu:400,700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <header>
-      <div class="banner">
-        <div class="site-navigation">
-          <div>
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+  <title>GOITeens</title>
+  <link rel="stylesheet" href="css/styles.min.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu:400,700&display=swap" rel="stylesheet">
+</head>
+<body>
+<header>
+  <div class="banner">
+    <div class="site-navigation">
+      <div>
         <a href="#" class="site-logo">
-          <img src="images/Logo.jpg" alt="site-logo" width="143" height="37" />
+          <img src="images/Logo.jpg" alt="site-logo" width="143" height="37"/>
         </a>
       </div>
-        <nav>
-          <ul class="site-navigation__list">
-            <li><a href="#" class="site-navigation__item">Front-End</a></li>
-            <li><a href="#" class="site-navigation__item">Game Dev</a></li>
-            <li><a href="#" class="site-navigation__item">Smart Design</a></li>
-            <li><a href="#" class="site-navigation__item">GoStart Kids</a></li>
-            <li><a href="#" class="site-navigation__item">Вакансії</a></li>
-            <li><a href="#" class="site-navigation__item">Контакти</a></li>
-          </ul>
-        </nav>
-        <button class="button header-button">Залишити заявку</button>
+      <nav>
+        <ul class="site-navigation__list">
+          <li><a href="#" class="site-navigation__item">Front-End</a></li>
+          <li><a href="#" class="site-navigation__item">Game Dev</a></li>
+          <li><a href="#" class="site-navigation__item">Smart Design</a></li>
+          <li><a href="#" class="site-navigation__item">GoStart Kids</a></li>
+          <li><a href="#" class="site-navigation__item">Вакансії</a></li>
+          <li><a href="#" class="site-navigation__item">Контакти</a></li>
+        </ul>
+      </nav>
+      <button class="button header-button">Залишити заявку</button>
+    </div>
+    <div class="banner-title container">
+      <h1>Наша місія</h1>
+      <div class="banner-info">
+        <p>
+          Допомогти кожному підлітку створити свою
+          <a href="#">історію успіху</a>
+        </p>
       </div>
-        <div class="banner-title container">
-          <h1>Наша місія</h1>
-          <div class="banner-info">
-            <p>
-              Допомогти кожному підлітку створити свою
-              <a href="#">історію успіху</a>
-            </p>
-          </div>
-        </div>
+    </div>
+  </div>
+</header>
+<section>
+  <div class="company container">
+    <div class="company__text">
+      <p>За останні 5 років кількість дітей, які вміють
+        користуватися комп'ютером, збільшилася
+        приблизно в 10 разів.</p>
+      <p>Як зазначає більшість дослідників, ці тенденції
+        будуть прискорюватися незалежно від шкільної
+        освіти.
+      </p>
+    </div>
+    <div class="company__image">
+    </div>
+    <div class="company_description">
+      <p>Програма навчання створюється за участі відомих спеціалістів IT сектору,
+        успішних стартаперів, бізнес-тренерів і підліткових психологів.</p>
+    </div>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="section__title">
+      <div class="section__title-icon">
       </div>
-    </header>
-    <section>
-        <div class="company container">
-            <div class="company__text">
-                <p>За останні 5 років кількість дітей, які вміють
-                    користуватися комп'ютером, збільшилася
-                    приблизно в 10 разів.</p>
-                <p>Як зазначає більшість дослідників, ці тенденції
-                    будуть прискорюватися незалежно від шкільної
-                    освіти.
-                </p>
-            </div>
-          <div class="company__image">
-          </div>
-          <div class="company_description">
-            <p>Програма навчання створюється за участі відомих спеціалістів IT сектору,
-              успішних стартаперів, бізнес-тренерів і підліткових психологів.</p>
-          </div>
-        </div>
-    </section>
-  </body>
+      <h2 class="section__title-text">
+        напрямки goiteens
+      </h2>
+    </div>
+    <div class="fields__list">
+      <div class="fields__item">
+        <p class="fields__item-title">
+          Front-End
+        </p>
+        <p class="fields__item-description">
+          Створення веб-сайтів будь якої складності
+        </p>
+        <p class="fields__item-price">
+          13-15
+        </p>
+        <p class="fields__item-arrow">
+          &#8594;
+        </p>
+      </div>
+      <div class="fields__item">
+        <p class="fields__item-title">
+          Game Dev
+        </p>
+        <p class="fields__item-description">
+          Розробка власних комп’ютерних ігор
+        </p>
+        <p class="fields__item-price">
+          13-15
+        </p>
+        <p class="fields__item-arrow">
+          &#8594;
+        </p>
+      </div>
+      <div class="fields__item">
+        <p class="fields__item-title">
+          Smart Design
+        </p>
+        <p class="fields__item-description">
+          Опанування графічними редакторами
+        </p>
+        <p class="fields__item-price">
+          13-15
+        </p>
+        <p class="fields__item-arrow">
+          &#8594;
+        </p>
+      </div>
+      <div class="fields__item">
+        <p class="fields__item-title">
+          GoStart Kids
+        </p>
+        <p class="fields__item-description">
+          Мета: Вивчення базових технологій
+        </p>
+        <p class="fields__item-price">
+          13-15
+        </p>
+        <p class="fields__item-arrow">
+          &#8594;
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+</body>
 </html>
