--- a/src/index.html
+++ b/src/index.html
@@ -6,29 +6,46 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>GOITeens</title>
     <link rel="stylesheet" href="css/styles.min.css" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu:400,700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu:400,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <div class="banner">
         <div class="site-navigation">
           <div>
-        <a href="#" class="site-logo">
-          <img src="images/Logo.jpg" alt="site-logo" width="143" height="37" />
-        </a>
-      </div>
-        <nav>
-          <ul class="site-navigation__list">
-            <li><a href="#" class="site-navigation__item">Front-End</a></li>
-            <li><a href="#" class="site-navigation__item">Game Dev</a></li>
-            <li><a href="#" class="site-navigation__item">Smart Design</a></li>
-            <li><a href="#" class="site-navigation__item">GoStart Kids</a></li>
-            <li><a href="#" class="site-navigation__item">Вакансії</a></li>
-            <li><a href="#" class="site-navigation__item">Контакти</a></li>
-          </ul>
-        </nav>
-        <button class="button header-button">Залишити заявку</button>
-      </div>
+            <a href="#" class="site-logo">
+              <img
+                src="images/Logo.jpg"
+                alt="site-logo"
+                width="143"
+                height="37"
+              />
+            </a>
+          </div>
+          <button class="checkbox">
+            <div class="checkbox__menu"></div>
+            <div class="checkbox__menu"></div>
+            <div class="checkbox__menu"></div>
+          </button>
+          <nav>
+            <ul class="site-navigation__list">
+              <li><a href="#" class="site-navigation__item">Front-End</a></li>
+              <li><a href="#" class="site-navigation__item">Game Dev</a></li>
+              <li>
+                <a href="#" class="site-navigation__item">Smart Design</a>
+              </li>
+              <li>
+                <a href="#" class="site-navigation__item">GoStart Kids</a>
+              </li>
+              <li><a href="#" class="site-navigation__item">Вакансії</a></li>
+              <li><a href="#" class="site-navigation__item">Контакти</a></li>
+            </ul>
+          </nav>
+          <button class="button header-button">Залишити заявку</button>
+        </div>
         <div class="banner-title container">
           <h1 class="title">Наша місія</h1>
           <div class="banner-info">
@@ -38,30 +55,32 @@
             </p>
           </div>
         </div>
+        <div class="scroll">
+          <p>>></p>
+        </div>
       </div>
     </header>
     <section>
-        <div class="company container">
-            <div class="company__text">
-                <p>За останні 5 років кількість дітей, які вміють
-                    користуватися комп'ютером, збільшилася
-                    приблизно в 10 разів.</p>
-                <p>Як зазначає більшість дослідників, ці тенденції
-                    будуть прискорюватися незалежно від шкільної
-                    освіти.
-                </p>
-            </div>
-          <div class="company__image">
-          </div>
-          <div class="company_description">
-            <p>Програма навчання
-              створюється за участі
-              відомих спеціалістів
-              IT сектору,
-              успішних стартаперів, бізнес-тренерів
-              і підліткових психологів.</p>
-          </div>
+      <div class="company container">
+        <div class="company__text">
+          <p>
+            За останні 5 років кількість дітей, які вміють користуватися
+            комп'ютером, збільшилася приблизно в 10 разів.
+          </p>
+          <p>
+            Як зазначає більшість дослідників, ці тенденції будуть
+            прискорюватися незалежно від шкільної освіти.
+          </p>
         </div>
+        <div class="company__image"></div>
+        <div class="company_description">
+          <p>
+            Програма навчання створюється за участі відомих спеціалістів IT
+            сектору, успішних стартаперів, бізнес-тренерів і підліткових
+            психологів.
+          </p>
+        </div>
+      </div>
     </section>
   </body>
 </html>
