add services section

--- a/src/index.html
+++ b/src/index.html
@@ -40,93 +40,159 @@
     </div>
   </div>
 </header>
-<section>
-  <div class="company container">
-    <div class="company__text">
-      <p>За останні 5 років кількість дітей, які вміють
-        користуватися комп'ютером, збільшилася
-        приблизно в 10 разів.</p>
-      <p>Як зазначає більшість дослідників, ці тенденції
-        будуть прискорюватися незалежно від шкільної
-        освіти.
-      </p>
-    </div>
-    <div class="company__image">
-    </div>
-    <div class="company_description">
-      <p>Програма навчання створюється за участі відомих спеціалістів IT сектору,
-        успішних стартаперів, бізнес-тренерів і підліткових психологів.</p>
-    </div>
-  </div>
-</section>
-<section>
-  <div class="container">
-    <div class="section__title">
-      <div class="section__title-icon">
-      </div>
-      <h2 class="section__title-text">
-        напрямки goiteens
-      </h2>
-    </div>
-    <div class="fields__list">
-      <div class="fields__item">
-        <p class="fields__item-title">
-          Front-End
-        </p>
-        <p class="fields__item-description">
-          Створення веб-сайтів будь якої складності
-        </p>
-        <p class="fields__item-price">
-          13-15
-        </p>
-        <p class="fields__item-arrow">
-          &#8594;
+<main>
+  <section>
+    <div class="company container">
+      <div class="company__text">
+        <p>За останні 5 років кількість дітей, які вміють
+          користуватися комп'ютером, збільшилася
+          приблизно в 10 разів.</p>
+        <p>Як зазначає більшість дослідників, ці тенденції
+          будуть прискорюватися незалежно від шкільної
+          освіти.
         </p>
       </div>
-      <div class="fields__item">
-        <p class="fields__item-title">
-          Game Dev
-        </p>
-        <p class="fields__item-description">
-          Розробка власних комп’ютерних ігор
-        </p>
-        <p class="fields__item-price">
-          13-15
-        </p>
-        <p class="fields__item-arrow">
-          &#8594;
-        </p>
+      <div class="company__image">
       </div>
-      <div class="fields__item">
-        <p class="fields__item-title">
-          Smart Design
-        </p>
-        <p class="fields__item-description">
-          Опанування графічними редакторами
-        </p>
-        <p class="fields__item-price">
-          13-15
-        </p>
-        <p class="fields__item-arrow">
-          &#8594;
-        </p>
-      </div>
-      <div class="fields__item">
-        <p class="fields__item-title">
-          GoStart Kids
-        </p>
-        <p class="fields__item-description">
-          Мета: Вивчення базових технологій
-        </p>
-        <p class="fields__item-price">
-          13-15
-        </p>
-        <p class="fields__item-arrow">
-          &#8594;
-        </p>
+      <div class="company_description">
+        <p>Програма навчання створюється за участі відомих спеціалістів IT сектору,
+          успішних стартаперів, бізнес-тренерів і підліткових психологів.</p>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+<!--  fields section-->
+  <section>
+    <div class="container">
+      <div class="section__title">
+        <div class="section__title-icon">
+        </div>
+        <h2 class="section__title-text">
+          напрямки goiteens
+        </h2>
+      </div>
+      <ul class="fields__list">
+        <li class="fields__item">
+          <p class="fields__item-title">
+            Front-End
+          </p>
+          <p class="fields__item-description">
+            Створення веб-сайтів будь якої складності
+          </p>
+          <p class="fields__item-price">
+            13-15
+          </p>
+          <p class="fields__item-arrow">
+            &#8594;
+          </p>
+        </li>
+        <li class="fields__item">
+          <p class="fields__item-title">
+            Game Dev
+          </p>
+          <p class="fields__item-description">
+            Розробка власних комп’ютерних ігор
+          </p>
+          <p class="fields__item-price">
+            13-15
+          </p>
+          <p class="fields__item-arrow">
+            &#8594;
+          </p>
+        </li>
+        <li class="fields__item">
+          <p class="fields__item-title">
+            Smart Design
+          </p>
+          <p class="fields__item-description">
+            Опанування графічними редакторами
+          </p>
+          <p class="fields__item-price">
+            13-15
+          </p>
+          <p class="fields__item-arrow">
+            &#8594;
+          </p>
+        </li>
+        <li class="fields__item">
+          <p class="fields__item-title">
+            GoStart Kids
+          </p>
+          <p class="fields__item-description">
+            Мета: Вивчення базових технологій
+          </p>
+          <p class="fields__item-price">
+            13-15
+          </p>
+          <p class="fields__item-arrow">
+            &#8594;
+          </p>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <!--services section-->
+  <section>
+    <div class="container">
+      <div class="section__title">
+        <div class="section__title-icon">
+        </div>
+        <h2 class="section__title-text">
+          як ми навчаємо
+        </h2>
+      </div>
+      <ul class="services__list">
+        <li class="services__item">
+          <div class="services__logo services__logo-globe"></div>
+          <p class="services__description">
+            Даємо можливість<br>
+            стати частиною першої підліткової ІТ-спільноти.
+          </p>
+        </li>
+        <li class="services__item">
+          <div class="services__logo services__logo-hands"></div>
+          <p class="services__description">
+            Гарантуємо підтримку<br>
+            професійних розробників і викладачів
+          </p>
+        </li>
+        <li class="services__item">
+          <div class="services__logo services__logo-hi"></div>
+          <p class="services__description">
+            Прокачуємо технічні<br>
+            навички в програмуванні ігор, веб сайтів і дизайні.
+          </p>
+        </li>
+        <li class="services__item">
+          <div class="services__logo services__logo-money"></div>
+          <p class="services__description">
+            Показуємо можливі шляхи<br>
+            монетизації ідей.
+          </p>
+        </li>
+        <li class="services__item">
+          <div class="services__logo services__logo-pencil"></div>
+          <p class="services__description">
+            Вчимо презентувати себе<br>
+            та свої творчі задуми.
+          </p>
+        </li>
+        <li class="services__item">
+          <div class="services__logo services__logo-file"></div>
+          <p class="services__description">
+            Допомогаємо розробити<br>
+            власне портфоліо.
+          </p>
+        </li>
+        <li class="services__item">
+          <div class="services__logo services__logo-aim"></div>
+          <p class="services__description">
+            Надаємо інтерактивний<br>
+            навчальний простір
+          </p>
+        </li>
+      </ul>
+    </div>
+  </section>
+</main>
 </body>
 </html>
