add services section

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
     </div>
   </section>
 <!--  fields section-->
-  <section>
+  <section class="fields">
     <div class="container">
       <div class="section__title">
         <div class="section__title-icon">
@@ -131,7 +131,7 @@
     </div>
   </section>
   <!--services section-->
-  <section>
+  <section class="services">
     <div class="container">
       <div class="section__title">
         <div class="section__title-icon">
@@ -193,6 +193,55 @@
       </ul>
     </div>
   </section>
+<!--  section structure -->
+  <section>
+    <div class="container">
+      <div class="section__title">
+        <div class="section__title-icon">
+        </div>
+        <h2 class="section__title-text">
+          структура навчання
+        </h2>
+      </div>
+      <ul class="structure">
+        <li class="structure__item structure__item-tech">
+          <div class="structure__item-dash">
+            <p class="structure__title">1. Tech Skills</p>
+            <p class="structure__description">
+              Освоєння технічних навичок: вміння користуватись різними програмами, вивчення різних мов кодування.
+            </p>
+          </div>
+        </li>
+        <li class="structure__item structure__item-soft">
+          <div class="structure__item-dash">
+            <p class="structure__title">2. Soft Skills</p>
+            <p class="structure__description">
+              Self-building.
+              Time Management.
+              Effective Communication
+            </p>
+          </div>
+        </li>
+        <li class="structure__item structure__item-it">
+          <div class="structure__item-dash">
+            <p class="structure__title">3. IT English</p>
+            <p class="structure__description">
+              Вивчення розмовної англійської за допомогою Speaking Club
+            </p>
+          </div>
+        </li>
+        <li class="structure__item structure__item-hack">
+          <div class="structure__item-dash">
+            <p class="structure__title">4. Хакатон</p>
+            <p class="structure__description">
+              Дводенний Frontend марафон
+            </p>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
 </main>
 </body>
 </html>
+<!--TODO: fix BEM naming-->
