--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
   <title>GOITeens</title>
   <link rel="stylesheet" href="css/styles.min.css"/>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -42,26 +41,38 @@
 </header>
 <main>
   <section>
-    <div class="company container">
-      <div class="company__text">
-        <p>За останні 5 років кількість дітей, які вміють
-          користуватися комп'ютером, збільшилася
-          приблизно в 10 разів.</p>
-        <p>Як зазначає більшість дослідників, ці тенденції
-          будуть прискорюватися незалежно від шкільної
-          освіти.
-        </p>
+    <div class="container">
+      <div class="company">
+        <div class="company__text">
+          <p>За останні 5 років кількість дітей, які вміють
+            користуватися комп'ютером, збільшилася
+            приблизно в 10 разів.</p>
+          <p>Як зазначає більшість дослідників, ці тенденції
+            будуть прискорюватися незалежно від шкільної
+            освіти.
+          </p>
+        </div>
+<!--        <div class="company__image">-->
+<!--        </div>-->
+        <picture>
+          <source srcset="images/kids-desktop.jpg" media="(min-width: 1920px)">
+          <source srcset="images/kids-tablet.jpg" media="(min-width: 768px)">
+          <img src="images/kids-mobile.jpg" alt="kids">
+        </picture>
       </div>
-      <div class="company__image">
-      </div>
-      <div class="company_description">
+    </div>
+  </section>
+<!--  section description-->
+  <section>
+    <div class="container">
+      <div class="goit_description">
         <p>Програма навчання створюється за участі відомих спеціалістів IT сектору,
           успішних стартаперів, бізнес-тренерів і підліткових психологів.</p>
       </div>
     </div>
   </section>
 <!--  fields section-->
-  <section class="fields">
+  <section class="section">
     <div class="container">
       <div class="section__title">
         <div class="section__title-icon">
@@ -70,7 +81,7 @@
           напрямки goiteens
         </h2>
       </div>
-      <ul class="fields__list">
+      <ul class="fields">
         <li class="fields__item">
           <p class="fields__item-title">
             Front-End
@@ -131,7 +142,7 @@
     </div>
   </section>
   <!--services section-->
-  <section class="services">
+  <section class="section">
     <div class="container">
       <div class="section__title">
         <div class="section__title-icon">
@@ -140,7 +151,7 @@
           як ми навчаємо
         </h2>
       </div>
-      <ul class="services__list">
+      <ul class="services">
         <li class="services__item">
           <div class="services__logo services__logo-globe"></div>
           <p class="services__description">
@@ -194,7 +205,7 @@
     </div>
   </section>
 <!--  section structure -->
-  <section>
+  <section class="section">
     <div class="container">
       <div class="section__title">
         <div class="section__title-icon">
