--- a/src/index.html
+++ b/src/index.html
@@ -14,38 +14,38 @@
   <body>
     <header>
       <div class="banner">
-        <div class="site-navigation">
-          <div>
-            <a href="#" class="site-logo">
+        <div class="banner-menu container">
+          <div class="site-logo">
+            <a href="#">
               <img
-                src="images/Logo.jpg"
+                src="images/Logo.png"
                 alt="site-logo"
-                width="143"
-                height="37"
+                width="100"
+                height="26"
               />
             </a>
           </div>
-          <button class="checkbox">
-            <div class="checkbox__menu"></div>
-            <div class="checkbox__menu"></div>
-            <div class="checkbox__menu"></div>
+          <button class="burger">
+            <div class="burger__menu"></div>
+            <div class="burger__menu"></div>
+            <div class="burger__menu"></div>
           </button>
-          <nav>
-            <ul class="site-navigation__list">
-              <li><a href="#" class="site-navigation__item">Front-End</a></li>
-              <li><a href="#" class="site-navigation__item">Game Dev</a></li>
-              <li>
-                <a href="#" class="site-navigation__item">Smart Design</a>
-              </li>
-              <li>
-                <a href="#" class="site-navigation__item">GoStart Kids</a>
-              </li>
-              <li><a href="#" class="site-navigation__item">Вакансії</a></li>
-              <li><a href="#" class="site-navigation__item">Контакти</a></li>
-            </ul>
-          </nav>
-          <button class="button header-button">Залишити заявку</button>
         </div>
+        <nav class="site-navigation">
+          <ul class="site-navigation__list">
+            <li><a href="#" class="site-navigation__item">Front-End</a></li>
+            <li><a href="#" class="site-navigation__item">Game Dev</a></li>
+            <li>
+              <a href="#" class="site-navigation__item">Smart Design</a>
+            </li>
+            <li>
+              <a href="#" class="site-navigation__item">GoStart Kids</a>
+            </li>
+            <li><a href="#" class="site-navigation__item">Вакансії</a></li>
+            <li><a href="#" class="site-navigation__item">Контакти</a></li>
+            <button class="button header-button">Залишити заявку</button>
+          </ul>
+        </nav>
         <div class="banner-title container">
           <h1 class="title">Наша місія</h1>
           <div class="banner-info">
@@ -55,9 +55,7 @@
             </p>
           </div>
         </div>
-        <div class="scroll">
-          <p>>></p>
-        </div>
+        <bottom class="scroll">>></bottom>
       </div>
     </header>
     <section>
@@ -82,5 +80,49 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="page-footer">
+        <div class="contacts container">
+          <div class="footer-logo">
+            <a href="#">
+              <img
+                src="images/Logo.png"
+                alt="site-logo"
+                width="100"
+                height="26"
+              />
+            </a>
+          </div>
+          <address class="page-adress">
+            01133 Україна, Київ 5 хвилин від м. Печерська бул. Лесі Українки
+          </address>
+          <ul class="contacts-list">
+            <li><a href="mail:contact@goiteens.ua">contact@goiteens.ua</a></li>
+            <li><a href="tel:+38 093 343 21 27">+38 093 343 21 27</a></li>
+            <li><a href="tel:+38 067 326 95 92">+38 067 326 95 92</a></li>
+            <li><a href="tel:+38 050 366 17 77">+38 050 366 17 77</a></li>
+          </ul>
+          <button class="footer-button">Залишити заявку</button>
+          <div class="socials-links">
+            <button
+              class="socials-links__icon socials-links__icon--telegram"
+            ></button>
+            <button
+              class="socials-links__icon  socials-links__icon--facebook"
+            ></button>
+            <button
+              class="socials-links__icon socials-links__icon--youtube"
+            ></button>
+          </div>
+        </div>
+      </div>
+      <div class="footer-under">
+        <div class="footer-under__info container">
+          <p>Політика конфіденційності</p>
+          <p>Відмова від відповідальності</p>
+          <p>Згода з розсилкою</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
