--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,18 @@
 <body>
   <header>
     <div class="banner">
-      <div class="site-navigation">
-        <div>
-          <a href="#" class="site-logo">
-            <img src="images/Logo.jpg" alt="site-logo" width="143" height="37" />
+      <div class="banner-menu container">
+        <div class="site-logo">
+          <a href="#">
+            <img src="images/Logo.png" alt="site-logo" width="143" height="37" />
           </a>
         </div>
-        <button class="checkbox">
-          <div class="checkbox__menu"></div>
-          <div class="checkbox__menu"></div>
-          <div class="checkbox__menu"></div>
+        <button class="burger">
+          <div class="burger__menu"></div>
+          <div class="burger__menu"></div>
+          <div class="burger__menu"></div>
         </button>
-        <nav>
+        <nav class="site-navigation">
           <ul class="site-navigation__list">
             <li><a href="#" class="site-navigation__item">Front-End</a></li>
             <li><a href="#" class="site-navigation__item">Game Dev</a></li>
@@ -35,9 +35,9 @@
             </li>
             <li><a href="#" class="site-navigation__item">Вакансії</a></li>
             <li><a href="#" class="site-navigation__item">Контакти</a></li>
+            <button class="button header-button">Залишити заявку</button>
           </ul>
         </nav>
-        <button class="button header-button">Залишити заявку</button>
       </div>
       <div class="banner-title container">
         <h1 class="title">Наша місія</h1>
@@ -48,9 +48,7 @@
           </p>
         </div>
       </div>
-      <div class="scroll">
-        <p>>></p>
-      </div>
+      <bottom class="scroll">>></bottom>
     </div>
   </header>
   <main>
