--- a/src/index.html
+++ b/src/index.html
@@ -277,12 +277,7 @@
         <div class="contacts container">
           <div class="footer-logo">
             <a href="#">
-              <img
-                src="images/Logo.png"
-                alt="site-logo"
-                width="100"
-                height="26"
-              />
+              <img src="images/Logo.png" alt="site-logo" width="100" height="26" />
             </a>
           </div>
           <div class="contacts-info">
@@ -290,9 +285,7 @@
               01133 Україна, Київ 5 хвилин від м. Печерська бул. Лесі Українки
             </address>
             <ul class="contacts-list">
-              <li>
-                <a href="mail:contact@goiteens.ua">contact@goiteens.ua</a>
-              </li>
+              <li><a href="mail:contact@goiteens.ua">contact@goiteens.ua</a></li>
               <li><a href="tel:+38 093 343 21 27">+38 093 343 21 27</a></li>
               <li><a href="tel:+38 067 326 95 92">+38 067 326 95 92</a></li>
               <li><a href="tel:+38 050 366 17 77">+38 050 366 17 77</a></li>
@@ -300,15 +293,9 @@
             <div class="footer-nav">
               <button class="footer-button">Залишити заявку</button>
               <div class="socials-links">
-                <button
-                  class="socials-links__icon socials-links__icon--telegram"
-                ></button>
-                <button
-                  class="socials-links__icon  socials-links__icon--facebook"
-                ></button>
-                <button
-                  class="socials-links__icon socials-links__icon--youtube"
-                ></button>
+                <button class="socials-links__icon socials-links__icon--telegram"></button>
+                <button class="socials-links__icon  socials-links__icon--facebook"></button>
+                <button class="socials-links__icon socials-links__icon--youtube"></button>
               </div>
             </div>
           </div>
@@ -316,9 +303,9 @@
       </div>
       <div class="footer-under">
         <div class="footer-under__info container">
-          <p>Політика конфіденційності</p>
-          <p>Відмова від відповідальності</p>
-          <p>Згода з розсилкою</p>
+          <a href="#" class="footer-under__link">Політика конфіденційності</a>
+          <a href="#" class="footer-under__link">Відмова від відповідальності</a>
+          <a href="#" class="footer-under__link">Згода з розсилкою</a>
         </div>
       </div>
     </footer>
