--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,16 @@
           </ul>
         </nav>
       </div>
-    </div>
-    <bottom class="scroll">>></bottom>
+      <div class="banner-title container">
+        <h1 class="title">Наша місія</h1>
+        <div class="banner-info">
+          <p>
+            Допомогти кожному підлітку створити свою
+            <a href="#">історію успіху</a>
+          </p>
+        </div>
+      </div>
+      <bottom class="scroll">>></bottom>
     </div>
   </header>
   <main>
