--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,30 @@
   <body>
     <header>
       <div class="banner">
+          <div class="modal">
+              <nav class="modal-navigation">
+                  <div class="modal__img">
+                      <img src="images/Logo.png" alt="logo">
+                    </div>
+                  <ul class="modal-navigation__list">
+                    <li><a href="#" class="modal-navigation__item">Front-End</a></li>
+                    <li><a href="#" class="modal-navigation__item">Game Dev</a></li>
+                    <li>
+                      <a href="#" class="modal-navigation__item">Smart Design</a>
+                    </li>
+                    <li>
+                      <a href="#" class="modal-navigation__item">GoStart Kids</a>
+                    </li>
+                    <li><a href="#" class="modal-navigation__item">Вакансії</a></li>
+                    <li><a href="#" class="modal-navigation__item">Контакти</a></li>
+                    <button class="button modal-button">Залишити заявку</button>
+                  </ul>
+                  <div class="modal__close">
+                      <div class="modal__close-line"></div>
+                      <div class="modal__close-line"></div>
+                    </div>
+                </nav>
+          </div>
         <div class="banner-menu container">
           <div class="site-logo">
             <a href="#">
@@ -279,7 +303,7 @@
     </main>
     <footer>
       <div class="page-footer">
-        <a href="#"><div class="arrow"></div></a>
+        <a href="#"><div class="arrow arrow__image"></div></a>
         <div class="contacts container">
           <div class="footer-logo">
             <a href="#">
